--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.7",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
