installed axios for http requests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.17.7",
+    "axios": "^1.7.3",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
