--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "vite --host & python3 ../backend/run.py",
+    "start": "vite --host",
+    "start-back": "python3 ../backend/run.py",
     "watch": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -15,13 +16,16 @@
     "@types/lodash": "^4.17.7",
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
