--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,13 @@
     "dev": "vite",
     "start": "vite --host",
     "start-back": "python3 ../backend/run.py",
+    "start-app": "npm run start & npm run start-back",
     "watch": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/lodash": "^4.17.7",
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
@@ -25,6 +25,7 @@
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
